--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
 					<!--画布集-->
 					<div id="j-cvs_set" class="g-cvs_set">
 						<!--画布-->
-						<ul class="g-cvs_item active">
+						<ul class="active">
 						<!--单个元素-->
 							<!--<li>
 								<div class="g-pointctrl">
