--- a/tt.html
+++ b/tt.html
@@ -21,7 +21,12 @@
 			console.log(rs)
 //			s.friends.push('333');
 //			console.log(s.friends.toString())
-//			console.log(p.friends.tost)
+//			console.log(p.friends.tost)curl -o- https://raw.githubusercontent.com/creationix/nvm/<v4.4.4>/install.sh | bash
+			var a=1;
+			var b=2;
+			var c=3;
+			var [a,b,]
+
 		</script>
 	</head>
 	<body>
