--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
 
 			<div class="g-cvs_main" id="j-cvs_main">
 				<div class="g-tools" id="j-tools">
-					<a href="javascript:" data-name="删除"><i class="icon icon-delete"></i></a>
-					<a href="javascript:" data-name="复制"><i class="icon icon-copy"></i></a>
-					<a href="javascript:" data-name="水平镜像"><i class="icon icon-horizontal"></i></a>
-					<a href="javascript:" data-name="垂直镜像"><i class="icon icon-vertical"></i></a>
+					<a id="j-delete" href="javascript:" data-name="删除"><i class="icon icon-delete"></i></a>
+					<a id="j-copy" href="javascript:" data-name="复制"><i class="icon icon-copy"></i></a>
+					<a id="j-flipHorizontal" href="javascript:" data-name="水平镜像"><i class="icon icon-horizontal"></i></a>
+					<a id="j-flipVertical" href="javascript:" data-name="垂直镜像"><i class="icon icon-vertical"></i></a>
 					<a href="javascript:" data-name="顶层"><i class="icon icon-layertop"></i></a>
 					<a href="javascript:" data-name="上移一层"><i class="icon icon-layerforward"></i></a>
 					<a href="javascript:" data-name="下移一层"><i class="icon icon-layerbackward"></i></a>
@@ -917,7 +917,7 @@
 								<div class="col col-1">风格:</div>
 								<div class="col col-2"><input class="col-content" type="text" value="田园简欧" /></div>
 							</div>
-							<div class="row">
+							<div class="row row-space">
 								<div class="col col-1">空间:</div>
 								<div class="col col-2">
 									<div class="col-content">
