--- a/index.html
+++ b/index.html
@@ -173,13 +173,13 @@
 					<a id="j-copy" href="javascript:" data-name="复制"><i class="icon icon-copy"></i></a>
 					<a id="j-flipHorizontal" href="javascript:" data-name="水平镜像"><i class="icon icon-horizontal"></i></a>
 					<a id="j-flipVertical" href="javascript:" data-name="垂直镜像"><i class="icon icon-vertical"></i></a>
-					<a href="javascript:" data-name="顶层"><i class="icon icon-layertop"></i></a>
-					<a href="javascript:" data-name="上移一层"><i class="icon icon-layerforward"></i></a>
-					<a href="javascript:" data-name="下移一层"><i class="icon icon-layerbackward"></i></a>
-					<a href="javascript:" data-name="底层"><i class="icon icon-layerbottom"></i></a>
-					<a href="javascript:" data-name="成组"><i class="icon icon-group"></i></a>
-					<a href="javascript:" data-name="解组"><i class="icon icon-part"></i></a>
-					<a href="javascript:" data-name="锁定"><i class="icon icon-lock"></i></a>
+					<a id="j-layertop" href="javascript:" data-name="顶层"><i class="icon icon-layertop"></i></a>
+					<a id="j-layerforward" href="javascript:" data-name="上移一层"><i class="icon icon-layerforward"></i></a>
+					<a id="j-layerbackward" href="javascript:" data-name="下移一层"><i class="icon icon-layerbackward"></i></a>
+					<a id="j-layerbottom" href="javascript:" data-name="底层"><i class="icon icon-layerbottom"></i></a>
+					<!--<a id="j-group" href="javascript:" data-name="成组"><i class="icon icon-group"></i></a>
+					<a id="j-part" href="javascript:" data-name="解组"><i class="icon icon-part"></i></a>-->
+					<a id="j-lock" href="javascript:" data-name="锁定"><i class="icon icon-lock"></i></a>
 				</div>
 				<div id="j-library" class="g-library">
 					<!--库面板的tab栏-->
