--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 					<a id="j-layerforward" href="javascript:" data-name="上移一层"><i class="icon icon-layerforward"></i></a>
 					<a id="j-layerbackward" href="javascript:" data-name="下移一层"><i class="icon icon-layerbackward"></i></a>
 					<a id="j-layerbottom" href="javascript:" data-name="底层"><i class="icon icon-layerbottom"></i></a>
-					<!--<a id="j-group" href="javascript:" data-name="成组"><i class="icon icon-group"></i></a>
-					<a id="j-part" href="javascript:" data-name="解组"><i class="icon icon-part"></i></a>-->
+					<a id="j-group" href="javascript:" data-name="成组"><i class="icon icon-group"></i></a>
+					<a id="j-part" href="javascript:" data-name="解组"><i class="icon icon-part"></i></a>
 					<a id="j-lock" href="javascript:" data-name="锁定"><i class="icon icon-lock"></i></a>
 				</div>
 				<div id="j-library" class="g-library">
@@ -474,9 +474,9 @@
 								</ul>
 								<script id="t-item1_detail" type="text/template7">
 									{{#each list}}
-									<li data-id="{{id}}" data-name="{{name}}" data-price="{{price}}" data-spec="{{spec}}" data-material="{{material}}" data-traigle="{{traigle}}">
+									<li data-name="{{name}}" data-price="{{price}}" data-spec="{{spec}}" data-material="{{material}}" data-traigle="{{traigle}}">
 										<a href="javascript:">
-											<img src="{{url}}" />
+											<img data-id="{{id}}" src="{{url}}" />
 											<span class="u-love {{islove}}"><i class="icon icon-love"></i></span>
 										</a>
 									</li>
@@ -521,9 +521,9 @@
 							</ul>
 							<script id="t-comment" type="text/template7">
 								{{#each list}}
-								<li data-id="{{id}}">
+								<li>
 									<a href="javascript:">
-										<img src="{{url}}" />
+										<img data-id="{{id}}" src="{{url}}" />
 										<span class="u-close"><i class="icon icon-close"></i></span>
 										<span class="u-down"><i class="icon icon-down"></i></span>
 									</a>
@@ -554,9 +554,9 @@
 							</ul>
 							<script id="t-user" type="text/template7">
 								{{#each list}}
-								<li data-id="id">
+								<li>
 									<a href="javascript:">
-										<img src="{{url}}" />
+										<img data-id="{{id}}" src="{{url}}" />
 										<span class="u-close"><i class="icon icon-close"></i></span>
 									</a>
 								</li>
@@ -587,9 +587,9 @@
 							</ul>
 							<script id="t-collect" type="text/template7">
 								{{#each list}}
-								<li data-id="{{id}}">
+								<li>
 									<a href="javascript:">
-										<img src="{{url}}" />
+										<img data-id="{{id}}" src="{{url}}" />
 										<span class="u-close"><i class="icon icon-close"></i></span>
 									</a>
 								</li>
@@ -662,7 +662,7 @@
 								{{#each list}}
 								<li>
 									<a href="javascript:">
-										<img src="{{this}}" />
+										<img  data-id="{{id}}" src="{{url}}" />
 									</a>
 								</li>
 								{{/each}}
@@ -703,9 +703,9 @@
 						</div>
 						<!-- 文字  -->
 						<div class="hide content">
-							<ul class="lib-drag">
+							<ul class="lib-drag m-lib_word">
 								<li>
-									<a class="u-char" href="javascript:"><img src="img/ABcd.png" /></a>
+									ABcd
 								</li>
 							</ul>
 						</div>
@@ -722,7 +722,7 @@
 								{{#each list}}
 								<li>
 									<a href="javascript:">
-										<img src="{{this}}" />
+										<img data-id={{id}} src="{{url}}" />
 									</a>
 								</li>
 								{{/each}}
@@ -752,7 +752,7 @@
 								{{#each list}}
 								<li>
 									<a href="javascript:">
-										<img src="{{this}}" />
+										<img data-id={{id}} src="{{url}}" />
 									</a>
 								</li>
 								{{/each}}
