--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <!-- saved from url=(0036)http://www.rzds.net/?c=flash&a=tools -->
 <html>
 
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<title>软装大师</title>
 		<link href="css/global.css" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="js/jquery.js"></script>
@@ -32,7 +32,7 @@
 					},
 					function() {
 						$(".login-show").hide();
-						$(".login-name span").addClass("smjt1");
+						$(".login-name span").addclass("smjt1");
 					});
 
 			});
@@ -69,10 +69,10 @@
 				<div class="top-nav-nav2 fl">
 					<ul>
 						<li>
-							<a href="http://www.rzds.net/?c=flash&amp;a=tools" class="dp" target="_blank">2D搭配&nbsp;</a>
+							<a href="http://www.rzds.net/?c=flash&amp;a=tools" class="dp" target="_blank">2d搭配&nbsp;</a>
 						</li>
 						<li>
-							<a href="http://rzds.admin.3vjia.com/" class="sd" target="_blank">3D设计&nbsp;</a>
+							<a href="http://rzds.admin.3vjia.com/" class="sd" target="_blank">3d设计&nbsp;</a>
 						</li>
 						<li>
 							<a href="http://www.rzds.net/?c=video#a" class="help" target="_blank">帮助视频</a>
@@ -171,8 +171,8 @@
 				<div class="g-tools" id="j-tools">
 					<a id="j-delete" href="javascript:" data-name="删除"><i class="icon icon-delete"></i></a>
 					<a id="j-copy" href="javascript:" data-name="复制"><i class="icon icon-copy"></i></a>
-					<a id="j-flipHorizontal" href="javascript:" data-name="水平镜像"><i class="icon icon-horizontal"></i></a>
-					<a id="j-flipVertical" href="javascript:" data-name="垂直镜像"><i class="icon icon-vertical"></i></a>
+					<a id="j-fliphorizontal" href="javascript:" data-name="水平镜像"><i class="icon icon-horizontal"></i></a>
+					<a id="j-flipvertical" href="javascript:" data-name="垂直镜像"><i class="icon icon-vertical"></i></a>
 					<a id="j-layertop" href="javascript:" data-name="顶层"><i class="icon icon-layertop"></i></a>
 					<a id="j-layerforward" href="javascript:" data-name="上移一层"><i class="icon icon-layerforward"></i></a>
 					<a id="j-layerbackward" href="javascript:" data-name="下移一层"><i class="icon icon-layerbackward"></i></a>
@@ -233,9 +233,9 @@
 									<ul>
 										{{#each sublist}}
 										<li>
-											<strong>{{subtitle}}</strong> {{#if allList}}
+											<strong>{{subtitle}}</strong> {{#if alllist}}
 											<ul>
-												{{#each allList}}
+												{{#each alllist}}
 												<li>{{this}}</li>
 												{{/each}}
 											</ul>
@@ -483,7 +483,7 @@
 									{{/each}}
 								</script>
 								<div class="u-proc_info" id="j-proc_info">
-									<h4>RoNS-双人沙发</h4>
+									<h4>rons-双人沙发</h4>
 									<strong>￥32098.50</strong>
 									<p>
 										<span>规格：1880990122</span>
@@ -504,7 +504,7 @@
 									<a class="next" href="javascript:"><i class="icon icon-traigleright"></i></a>
 									<a class="last" href="javascript:"><i class="icon icon-liboff"></i></a>
 									<input type="text" />
-									<a class="u-go" href="javascript:">GO</a>
+									<a class="u-go" href="javascript:">go</a>
 								</div>
 							</div>
 						</div>
@@ -539,7 +539,7 @@
 								<a class="next" href="javascript:"><i class="icon icon-traigleright"></i></a>
 								<a class="last" href="javascript:"><i class="icon icon-liboff"></i></a>
 								<input type="text" />
-								<a class="u-go" href="javascript:">GO</a>
+								<a class="u-go" href="javascript:">go</a>
 							</div>
 						</div>
 						<!-- 户型库 -->
@@ -571,7 +571,7 @@
 								<a class="next" href="javascript:"><i class="icon icon-traigleright"></i></a>
 								<a class="last" href="javascript:"><i class="icon icon-liboff"></i></a>
 								<input type="text" />
-								<a class="u-go" href="javascript:">GO</a>
+								<a class="u-go" href="javascript:">go</a>
 							</div>
 						</div>
 						<!-- 我的收藏 -->
@@ -604,7 +604,7 @@
 								<a class="next" href="javascript:"><i class="icon icon-traigleright"></i></a>
 								<a class="last" href="javascript:"><i class="icon icon-liboff"></i></a>
 								<input type="text" />
-								<a class="u-go" href="javascript:">GO</a>
+								<a class="u-go" href="javascript:">go</a>
 							</div>
 						</div>
 						<!-- 个人素材 -->
@@ -632,7 +632,7 @@
 								<a class="next" href="javascript:"><i class="icon icon-traigleright"></i></a>
 								<a class="last" href="javascript:"><i class="icon icon-liboff"></i></a>
 								<input type="text" />
-								<a class="u-go" href="javascript:">GO</a>
+								<a class="u-go" href="javascript:">go</a>
 							</div>
 						</div>
 						<!-- 产品清单 -->
@@ -641,7 +641,7 @@
 								<li>
 									<a href="javascript:"><img src="tmp/proc01.png" /></a>
 									<div class="m-proc_word">
-										RONS三人沙发<br /> 规格：980*2410*1200
+										rons三人沙发<br /> 规格：980*2410*1200
 										<br /> 材质：烨木
 										<br /> 周期：7-15天
 									</div>
@@ -676,7 +676,7 @@
 								<a class="next" href="javascript:"><i class="icon icon-traigleright"></i></a>
 								<a class="last" href="javascript:"><i class="icon icon-liboff"></i></a>
 								<input type="text" />
-								<a class="u-go" href="javascript:">GO</a>
+								<a class="u-go" href="javascript:">go</a>
 							</div>
 						</div>
 						<!-- 色卡  -->
@@ -698,14 +698,14 @@
 								<a class="next" href="javascript:"><i class="icon icon-traigleright"></i></a>
 								<a class="last" href="javascript:"><i class="icon icon-liboff"></i></a>
 								<input type="text" />
-								<a class="u-go" href="javascript:">GO</a>
+								<a class="u-go" href="javascript:">go</a>
 							</div>
 						</div>
 						<!-- 文字  -->
 						<div class="hide content">
 							<ul class="lib-drag m-lib_word">
 								<li>
-									ABcd
+									abcd
 								</li>
 							</ul>
 						</div>
@@ -736,7 +736,7 @@
 								<a class="next" href="javascript:"><i class="icon icon-traigleright"></i></a>
 								<a class="last" href="javascript:"><i class="icon icon-liboff"></i></a>
 								<input type="text" />
-								<a class="u-go" href="javascript:">GO</a>
+								<a class="u-go" href="javascript:">go</a>
 							</div>
 						</div>
 						<!-- 灯光  -->
@@ -766,7 +766,7 @@
 								<a class="next" href="javascript:"><i class="icon icon-traigleright"></i></a>
 								<a class="last" href="javascript:"><i class="icon icon-liboff"></i></a>
 								<input type="text" />
-								<a class="u-go" href="javascript:">GO</a>
+								<a class="u-go" href="javascript:">go</a>
 							</div>
 						</div>
 						<!--con end-->
@@ -992,7 +992,7 @@
 									<div class="subcol">
 										<a href="javascript:">其它</a>
 										<a href="javascript:">居家</a>
-										<a href="javascript:">KTV</a>
+										<a href="javascript:">ktv</a>
 										<a href="javascript:">影院</a>
 										<a href="javascript:">酒吧</a>
 										<a href="javascript:">健身房</a>
