--- a/tt.html
+++ b/tt.html
@@ -10,8 +10,11 @@
 	</head>
 	<body>
 		<div id="p">
-			<div id="c">
-				
+			<div id="c" contenteditable="true">这是一段可编辑的段落。请试着编辑该文本。</div>
+		</div>
+		<div id="p" style="top: 200px;">
+			<div id="c" contenteditable="true">
+				hello
 			</div>
 		</div>
 	</body>
