--- a/index.html
+++ b/index.html
@@ -114,29 +114,16 @@
 				<ul class="fl">
 					<li class="u-menu_item">
 						<a id="j-new_cvs" href="javascript:"><i class="icon icon-new"></i>新建</a>
-						<div class="g-submenu">
-							<i class="icon icon-uptriangle"></i>
-							<a href="javascript:">搭配</a>
-							<a href="javascript:">方案</a>
-						</div>
 					</li>
 					<li>
-						<a href="javascript:"><i class="icon icon-open"></i>打开</a>
+						<a id="j-open" href="javascript:"><i class="icon icon-open"></i>打开</a>
 					</li>
 					<li class="u-menu_item">
 						<a href="javascript:"><i class="icon icon-save"></i>保存</a>
 						<div class="g-submenu">
 							<i class="icon icon-uptriangle"></i>
-							<a href="javascript:">搭配</a>
-							<a href="javascript:">方案</a>
-						</div>
-					</li>
-					<li class="u-menu_item">
-						<a href="javascript:"><i class="icon icon-saveas"></i>另存为</a>
-						<div class="g-submenu">
-							<i class="icon icon-uptriangle"></i>
-							<a href="javascript:">搭配</a>
-							<a href="javascript:">方案</a>
+							<a class="u-pairs" href="javascript:">搭配</a>
+							<a class="u-plan" href="javascript:">方案</a>
 						</div>
 					</li>
 					<li>
@@ -154,16 +141,16 @@
 						<a href="javascript:"><i class="icon icon-release"></i>发布</a>
 						<div class="g-submenu">
 							<i class="icon icon-uptriangle"></i>
-							<a href="javascript:">搭配</a>
-							<a href="javascript:">方案</a>
+							<a class="u-pairs" href="javascript:">搭配</a>
+							<a class="u-plan" href="javascript:">方案</a>
 						</div>
 					</li>
 					<li>
 						<a id="j-full_screen" href="javascript:"><i class="icon icon-fullscreen"></i>全屏</a>
 					</li>
-					<li>
+					<!--<li>
 						<a href="javascript"><i class="icon icon-music"></i>音乐</a>
-					</li>
+					</li>-->
 				</ul>
 			</div>
 
@@ -180,6 +167,12 @@
 					<a id="j-group" href="javascript:" data-name="成组"><i class="icon icon-group"></i></a>
 					<a id="j-part" href="javascript:" data-name="解组"><i class="icon icon-part"></i></a>
 					<a id="j-lock" href="javascript:" data-name="锁定"><i class="icon icon-lock"></i></a>
+					<!--放大和缩小按钮-->
+					<div id="j-zoom" class="g-zoom">
+						<span class="u-jia"><i class="icon icon-jian"></i></span>
+						<span class="u-jian"><i class="icon icon-jia"></i></span>
+						<span class="u-dian"><i class="icon icon-dian"></i></span>
+					</div>
 				</div>
 				<div id="j-library" class="g-library">
 					<!--库面板的tab栏-->
@@ -277,11 +270,11 @@
 						<div id="j-cond2" class="pop-cond2 pop-cond">
 							<div class="pop-cond2_inner">
 								<a class="close close-pop" href="javascript:"><i class="icon icon-close"></i></a>
-								<div class="row first-row">
+								<div class="row first-row clearfix">
 									<div class="col col-1">尺寸：</div>
 									<div class="col col-2"><input type="text" />cm-&nbsp;&nbsp;&nbsp;<input type="text" />cm</div>
 								</div>
-								<div class="row sec-row">
+								<div class="row sec-row clearfix">
 									<div class="col col-1">价格：</div>
 									<div class="col col-2">
 										<label><input type="radio" name="price" />不限</label><br />
@@ -290,7 +283,7 @@
 										<label><input type="radio" name="price" />10001-50000</label><br />
 									</div>
 								</div>
-								<div class="row thr-row">
+								<div class="row thr-row clearfix">
 									<div class="col col-1">风格：</div>
 									<div class="col col-2">
 										<label><input type="radio" name="style" />不限</label>
@@ -311,7 +304,7 @@
 										<label><input type="radio" name="style" />田园</label>
 									</div>
 								</div>
-								<div class="row four-row">
+								<div class="row row-color clearfix">
 									<div class="col col-1">颜色：</div>
 									<div class="col col-2">
 										<a href="javascript:"><i></i></a>
@@ -371,7 +364,7 @@
 						<div id="j-cond2_sl" class="pop-cond2 pop-cond pop-cond2_sl">
 							<div class="pop-cond2_inner">
 								<a class="close close-pop" href="javascript:"><i class="icon icon-close"></i></a>
-								<div class="row">
+								<div class="row clearfix">
 									<div class="col col-1">省：</div>
 									<div class="col col-2">
 										<select id="j-province" name="">
@@ -383,7 +376,7 @@
 										</script>
 									</div>
 								</div>
-								<div class="row">
+								<div class="row clearfix">
 									<div class="col col-1">市：</div>
 									<div class="col col-2">
 										<select id="j-city" name="">
@@ -396,7 +389,7 @@
 										</script>
 									</div>
 								</div>
-								<div class="row">
+								<div class="row clearfix">
 									<div class="col col-1">区：</div>
 									<div class="col col-2">
 										<select id="j-area" name="">
@@ -409,7 +402,7 @@
 										</script>
 									</div>
 								</div>
-								<div class="row">
+								<div class="row clearfix">
 									<div class="col col-1">楼盘：</div>
 									<div class="col col-2">
 										<select id="j-floor" name="">
@@ -464,7 +457,7 @@
 							</div>
 							<!-- 产品分类下的数据列表 -->
 							<div id="j-detail_wrap" class="g-procs_detail">
-								<ul id="j-procs_detail" class="m-lib_list m-procs_detail lib-drag">
+								<ul id="j-procs_detail" class="m-lib_list m-procs_detail lib-drag proc">
 									<!--<li>
 										<a href="javascript:">
 											<img src="tmp/proc01.png" />
@@ -510,7 +503,7 @@
 						</div>
 						<!-- 公共库  -->
 						<div class="hide content">
-							<ul id="j-comment" class="m-lib_list m-other_list lib-drag">
+							<ul id="j-comment" class="m-lib_list m-other_list lib-drag proc">
 								<!--<li>
 									<a href="javascript:">
 										<img src="tmp/proc01.png" />
@@ -544,7 +537,7 @@
 						</div>
 						<!-- 户型库 -->
 						<div class="hide content">
-							<ul id="j-user" class="m-lib_list m-other_list lib-drag">
+							<ul id="j-user" class="m-lib_list m-other_list lib-drag proc">
 								<!--<li>
 									<a href="javascript:">
 										<img src="tmp/proc01.png" />
@@ -577,7 +570,7 @@
 						<!-- 我的收藏 -->
 
 						<div class="hide content">
-							<ul id="j-collect" class="m-lib_list m-other_list lib-drag">
+							<ul id="j-collect" class="m-lib_list m-other_list lib-drag proc">
 								<!--<li>
 									<a href="javascript:">
 										<img src="tmp/proc01.png" />
@@ -662,7 +655,7 @@
 								{{#each list}}
 								<li>
 									<a href="javascript:">
-										<img  data-id="{{id}}" src="{{url}}" />
+										<img data-id="{{id}}" src="{{url}}" />
 									</a>
 								</li>
 								{{/each}}
@@ -783,11 +776,11 @@
 							<p>色卡</p>
 						</li>
 						<li href="8">
-							<a href="javascript:"><i class="icon icon-graph"></i></a>
+							<a href="javascript:"><i class="icon icon-word"></i></a>
 							<p>文字</p>
 						</li>
 						<li href="9">
-							<a href="javascript:"><i class="icon icon-word"></i></a>
+							<a href="javascript:"><i class="icon icon-graph"></i></a>
 							<p>图形</p>
 						</li>
 						<li href="10">
@@ -844,6 +837,45 @@
 						</ul>
 					</div>
 				</div>
+				<!--相关图片-->
+				<div class="g-relative_img">
+					<ul id="j-rel_img">
+
+					</ul>
+					<script id="t-rel_img" type="text/template7">
+						{{#each list}}
+						<li><img src="{{url}}" /></li>
+						{{/each}}
+					</script>
+				</div>
+				<!--相关产品推荐-->
+				<div class="g-relative_proc">
+					<dl id="j-rel_show" class="m-rel_show">
+						<dt><img src="tmp/proc01.png"/></dt>
+						<dd>
+							<h4>rons-双人沙发</h4>
+							<strong>￥32098.50</strong>
+							<span>规格：1880990122</span>
+							<span>材质：叶木垭克力</span>
+							<a href="#">更多详情</a>
+						</dd>
+					</dl>
+					<div class="m-rel_list">
+						<ul id="j-rel_list">
+							<!--<li>
+								<a href="javascript:"><img src="tmp/proc01.png" /></a>
+							</li>-->
+						</ul>
+						<script id="t-rel_list" type="text/template7">
+							{{#each list}}
+							<li data-name="{{name}}" data-price="{{price}}" data-material="{{material}}" data-spec="{{spec}}" data-url="{{moreUrl}}">
+								<a href="javascript:"><img id="{{id}}" src="{{url}}" /></a>
+							</li>
+							{{/each}}
+						</script>
+					</div>
+					<span id="j-rel_bt" class="u-rel_bt">相关产品</span>
+				</div>
 			</div>
 		</div>
 
@@ -878,7 +910,7 @@
 		</div>
 
 		<!--保存搭配，弹出框-->
-		<div id="j-pop_upload" class="pop pop-save">
+		<div id="j-save_pairs" class="pop pop-save">
 			<div class="pop-inner">
 				<h3>保存搭配</h3>
 				<i class="icon icon-close pop-close"></i>
@@ -897,7 +929,7 @@
 										<span></span>
 										<i class="icon icon-traigledown"></i>
 									</div>
-									<div class="subcol">
+									<div class="subcol-color subcol-2">
 										<a href="javascript:"><i></i></a>
 										<a href="javascript:"><i></i></a>
 										<a href="javascript:"><i></i></a>
@@ -917,14 +949,14 @@
 								<div class="col col-1">风格:</div>
 								<div class="col col-2"><input class="col-content" type="text" value="田园简欧" /></div>
 							</div>
-							<div class="row row-space">
+							<div class="row">
 								<div class="col col-1">空间:</div>
 								<div class="col col-2">
 									<div class="col-content">
 										<span>其它</span>
 										<i class="icon icon-traigledown"></i>
 									</div>
-									<div class="subcol">
+									<div class="subcol subcol-2">
 										<a href="javascript:">其它</a>
 										<a href="javascript:">雪茄房</a>
 										<a href="javascript:">前台</a>
@@ -963,7 +995,7 @@
 										<span>两室一厅</span>
 										<i class="icon icon-traigledown"></i>
 									</div>
-									<div class="subcol">
+									<div class="subcol subcol-2">
 										<a href="javascript:">两室一厅</a>
 										<a href="javascript:">三室一厅</a>
 									</div>
@@ -976,7 +1008,7 @@
 										<span>90-180</span>
 										<i class="icon icon-traigledown"></i>
 									</div>
-									<div class="subcol">
+									<div class="subcol subcol-2">
 										<a href="javascript:">90-180</a>
 										<a href="javascript:">90</a>
 									</div>
@@ -989,7 +1021,7 @@
 										<span>其它</span>
 										<i class="icon icon-traigledown"></i>
 									</div>
-									<div class="subcol">
+									<div class="subcol subcol-2">
 										<a href="javascript:">其它</a>
 										<a href="javascript:">居家</a>
 										<a href="javascript:">ktv</a>
@@ -1011,6 +1043,152 @@
 							</div>
 						</dd>
 					</dl>
+					<div class="pop-bts">
+						<a class="pop-close" href="javascript:">取消</a>
+						<a href="javascript:">确定</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--保存方案，弹出框-->
+		<div id="j-save_plan" class="pop pop-save">
+			<div class="pop-inner">
+				<h3>保存方案</h3>
+				<i class="icon icon-close pop-close"></i>
+				<div class="pop-content">
+					<dl class="clearfix">
+						<dt><img src="tmp/proc01.png"/></dt>
+						<dd>
+							<div class="row">
+								<div class="col col-1">名称:</div>
+								<div class="col col-2"><input class="col-content" type="text" value="方案名称" /></div>
+							</div>
+							<div class="row">
+								<div class="col col-1">类别:</div>
+								<div class="col col-2">
+									<div class="col-content">
+										<span>健身房</span>
+										<i class="icon icon-traigledown"></i>
+									</div>
+									<div class="subcol subcol-2">
+										<a href="javascript:">健身房</a>
+										<a href="javascript:">公寓</a>
+										<a href="javascript:">专卖店</a>
+										<a href="javascript:">俱乐部</a>
+										<a href="javascript:">橱窗</a>
+										<a href="javascript:">展示厅</a>
+										<a href="javascript:">会所</a>
+										<a href="javascript:">别墅</a>
+										<a href="javascript:">酒店</a>
+										<a href="javascript:">办公室</a>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col col-1">风格:</div>
+								<div class="col col-2">
+									<div class="col-content">
+										<span>其它</span>
+										<i class="icon icon-traigledown"></i>
+									</div>
+									<div class="subcol subcol-2">
+										<a href="javascript:">田园简欧</a>
+										<a href="javascript:">田园</a>
+										<a href="javascript:">简欧</a>
+										<a href="javascript:">简美</a>
+										<a href="javascript:">北欧</a>
+										<a href="javascript:">其他混塔</a>
+										<a href="javascript:">伊斯兰</a>
+										<a href="javascript:">地中海</a>
+										<a href="javascript:">日式</a>
+										<a href="javascript:">现代</a>
+										<a href="javascript:">浅色现代</a>
+										<a href="javascript:">现代中式</a>
+										<a href="javascript:">现代波普</a>
+										<a href="javascript:">现代北欧</a>
+										<a href="javascript:">现代奢华</a>
+										<a href="javascript:">现代极简</a>
+										<a href="javascript:">新中式</a>
+										<a href="javascript:">新中式</a>
+										<a href="javascript:">中式传统</a>
+										<a href="javascript:">美式</a>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col col-1">面积:</div>
+								<div class="col col-2">
+									<div class="col-content">
+										<span>90-180</span>
+										<i class="icon icon-traigledown"></i>
+									</div>
+									<div class="subcol subcol-2">
+										<a href="javascript:">90-180</a>
+										<a href="javascript:">90</a>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col col-1">户型:</div>
+								<div class="col col-2">
+									<div class="col-content">
+										<span>两室一厅</span>
+										<i class="icon icon-traigledown"></i>
+									</div>
+									<div class="subcol subcol-2">
+										<a href="javascript:">两室一厅</a>
+										<a href="javascript:">三室一厅</a>
+									</div>
+								</div>
+							</div>
+						</dd>
+					</dl>
+					<div class="pop-bts">
+						<a class="pop-close" href="javascript:">取消</a>
+						<a href="javascript:">确定</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--打开-->
+		<div id="j-open_pop" class="pop pop-open">
+			<div class="pop-inner">
+				<h3>打开</h3>
+				<i class="icon icon-close pop-close"></i>
+				<div class="pop-content">
+					<div class="pop-tab">
+						<span class="active">搭配</span>
+						<span>方案</span>
+					</div>
+					<div class="clearfix">
+						<div class="cho_cond">
+							<span class="active">全部搭配</span>
+							<span>未公开搭配</span>
+							<span>公开搭配</span>
+						</div>
+						<div class="pop-search">
+							<i class="icon icon-search"></i>
+							<input type="text" placeholder="搜索" />
+						</div>
+					</div>
+					<div class="pop-con_wrap">
+						<ul id="j-pop_list" class="clearfix">
+							<!--<li>
+								<a href="javascript:"><img src="tmp/proc01.png"/></a>
+								<p>效果图</p>
+							</li>-->
+						</ul>
+						<script id="t-pop_list" type="text/template7">
+							{{#each list}}
+								<li>
+									<a href="javascript:"><img src="{{url}}"/></a>
+									<p>{{name}}</p>
+								</li>
+							{{/each}}
+						</script>
+					</div>
 					<div class="pop-bts">
 						<a class="pop-close" href="javascript:">取消</a>
 						<a href="javascript:">确定</a>
