--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>软装大师</title>
 		<link href="css/global.css" rel="stylesheet" type="text/css">
 		<!--<script type="text/javascript" src="js/jquery.js"></script>-->
-		<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+		<script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
 		<script src="js/template7.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/dataloader.js" type="text/javascript" charset="utf-8"></script>
 	</head>
